Fixed footer line spacing

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -91,6 +91,7 @@
     font-size: 15px;
     text-align: center;
     margin:0 auto;
+    margin-bottom: 10px;
 }
 
 .separator1{
