--- a/src/Chapter.module.css
+++ b/src/Chapter.module.css
@@ -103,6 +103,7 @@
     font-size: 15px;
     text-align: center;
     margin:0 auto;
+    margin-bottom: 10px;
 }
 
 
